--- a/config.yaml
+++ b/config.yaml
@@ -7,13 +7,13 @@ clients:
     files_path: ./files/long/client_2
 
 workers:
-  twentieth_century: 1
-  main_movie: 1
-  esp_production: 1
-  no_colab_productions: 1
-  sentiment: 1
-  arg_production: 1
+  twentieth_century: 2
+  main_movie: 2
+  esp_production: 2
+  no_colab_productions: 2
+  sentiment: 3
+  arg_production: 2
   credits: 2
-  ratings: 2
+  ratings: 3
 
-test: true
+test: false
