--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,14 @@ services:
     image: arg_production_filter:latest
     links:
     - rabbitmq
+  arg_production_filter_1:
+    depends_on:
+    - rabbitmq
+    environment:
+    - PYTHONUNBUFFERED=1
+    image: arg_production_filter:latest
+    links:
+    - rabbitmq
   best_and_worst_ratings_aggregator:
     build:
       context: .
@@ -50,9 +58,9 @@ services:
     - DECODIFIER_PORT=50000
     - CLIENT_ID=2
     volumes:
-    - ./files/long/client_1/movies_metadata.csv:/root/files/movies_metadata.csv
-    - ./files/long/client_1/credits.csv:/root/files/credits.csv
-    - ./files/long/client_1/ratings.csv:/root/files/ratings.csv
+    - ./files/long/client_2/movies_metadata.csv:/root/files/movies_metadata.csv
+    - ./files/long/client_2/credits.csv:/root/files/credits.csv
+    - ./files/long/client_2/ratings.csv:/root/files/ratings.csv
     - ./middleware:/app/middleware
   client_decodifier:
     build:
@@ -77,10 +85,26 @@ services:
     - rabbitmq
     volumes:
     - ./files:/root/files
+  credits_joiner_1:
+    depends_on:
+    - rabbitmq
+    environment:
+    - PYTHONUNBUFFERED=1
+    image: credits_joiner:latest
+    links:
+    - rabbitmq
   esp_production_filter:
     build:
       context: .
       dockerfile: filters/esp_production/esp_production_filter.dockerfile
+    depends_on:
+    - rabbitmq
+    environment:
+    - PYTHONUNBUFFERED=1
+    image: esp_production_filter:latest
+    links:
+    - rabbitmq
+  esp_production_filter_1:
     depends_on:
     - rabbitmq
     environment:
@@ -99,10 +123,26 @@ services:
     image: main_movie_filter:latest
     links:
     - rabbitmq
+  main_movie_filter_1:
+    depends_on:
+    - rabbitmq
+    environment:
+    - PYTHONUNBUFFERED=1
+    image: main_movie_filter:latest
+    links:
+    - rabbitmq
   no_colab_productions_filter:
     build:
       context: .
       dockerfile: filters/no_colab_productions/no_colab_productions_filter.dockerfile
+    depends_on:
+    - rabbitmq
+    environment:
+    - PYTHONUNBUFFERED=1
+    image: no_colab_productions_filter:latest
+    links:
+    - rabbitmq
+  no_colab_productions_filter_1:
     depends_on:
     - rabbitmq
     environment:
@@ -134,6 +174,22 @@ services:
     image: ratings_joiner:latest
     links:
     - rabbitmq
+  ratings_joiner_1:
+    depends_on:
+    - rabbitmq
+    environment:
+    - PYTHONUNBUFFERED=1
+    image: ratings_joiner:latest
+    links:
+    - rabbitmq
+  ratings_joiner_2:
+    depends_on:
+    - rabbitmq
+    environment:
+    - PYTHONUNBUFFERED=1
+    image: ratings_joiner:latest
+    links:
+    - rabbitmq
   sentiment_aggregator:
     build:
       context: .
@@ -148,6 +204,22 @@ services:
     build:
       context: .
       dockerfile: filters/sentiment_analizer/sentiment_analizer.dockerfile
+    depends_on:
+    - rabbitmq
+    environment:
+    - PYTHONUNBUFFERED=1
+    image: sentiment_filter:latest
+    links:
+    - rabbitmq
+  sentiment_filter_1:
+    depends_on:
+    - rabbitmq
+    environment:
+    - PYTHONUNBUFFERED=1
+    image: sentiment_filter:latest
+    links:
+    - rabbitmq
+  sentiment_filter_2:
     depends_on:
     - rabbitmq
     environment:
@@ -199,6 +271,14 @@ services:
     build:
       context: .
       dockerfile: filters/twentieth_century/twentieth_century_filter.dockerfile
+    depends_on:
+    - rabbitmq
+    environment:
+    - PYTHONUNBUFFERED=1
+    image: twentieth_century_filter:latest
+    links:
+    - rabbitmq
+  twentieth_century_filter_1:
     depends_on:
     - rabbitmq
     environment:
