--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,24 +5,39 @@ services:
       dockerfile: filters/arg_production/arg_production_filter.dockerfile
     depends_on:
     - rabbitmq
+    - monitor
     environment:
     - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=arg_production_filter
     image: arg_production_filter:latest
     links:
     - rabbitmq
   arg_production_filter_1:
     depends_on:
     - rabbitmq
+    - monitor
     environment:
     - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=arg_production_filter_1
     image: arg_production_filter:latest
     links:
     - rabbitmq
   arg_production_filter_2:
     depends_on:
     - rabbitmq
+    - monitor
     environment:
     - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=arg_production_filter_2
     image: arg_production_filter:latest
     links:
     - rabbitmq
@@ -32,8 +47,13 @@ services:
       dockerfile: aggregator/best_and_worst_ratings_aggregator/aggregator.dockerfile
     depends_on:
     - rabbitmq
+    - monitor
     environment:
     - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=best_and_worst_ratings_aggregator
     links:
     - rabbitmq
   client_2:
@@ -43,11 +63,16 @@ services:
     container_name: client_2
     depends_on:
     - client_decodifier
+    - monitor
     environment:
     - PYTHONUNBUFFERED=1
     - DECODIFIER_HOST=client_decodifier
     - DECODIFIER_PORT=50000
     - CLIENT_ID=2
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=client_2
     volumes:
     - ./files/long/client_2/movies_metadata.csv:/root/files/movies_metadata.csv
     - ./files/long/client_2/credits.csv:/root/files/credits.csv
@@ -59,6 +84,12 @@ services:
       dockerfile: client_decodifier/client_decodifier.dockerfile
     depends_on:
     - rabbitmq
+    - monitor
+    environment:
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=client_decodifier
     ports:
     - 50000:50000
     volumes:
@@ -69,8 +100,13 @@ services:
       dockerfile: joiner/credits/credits_joiner.dockerfile
     depends_on:
     - rabbitmq
+    - monitor
     environment:
     - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=credits_joiner
     image: credits_joiner:latest
     links:
     - rabbitmq
@@ -79,16 +115,26 @@ services:
   credits_joiner_1:
     depends_on:
     - rabbitmq
+    - monitor
     environment:
     - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=credits_joiner_1
     image: credits_joiner:latest
     links:
     - rabbitmq
   credits_joiner_2:
     depends_on:
     - rabbitmq
+    - monitor
     environment:
     - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=credits_joiner_2
     image: credits_joiner:latest
     links:
     - rabbitmq
@@ -98,24 +144,39 @@ services:
       dockerfile: filters/esp_production/esp_production_filter.dockerfile
     depends_on:
     - rabbitmq
+    - monitor
     environment:
     - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=esp_production_filter
     image: esp_production_filter:latest
     links:
     - rabbitmq
   esp_production_filter_1:
     depends_on:
     - rabbitmq
+    - monitor
     environment:
     - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=esp_production_filter_1
     image: esp_production_filter:latest
     links:
     - rabbitmq
   esp_production_filter_2:
     depends_on:
     - rabbitmq
+    - monitor
     environment:
     - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=esp_production_filter_2
     image: esp_production_filter:latest
     links:
     - rabbitmq
@@ -125,51 +186,94 @@ services:
       dockerfile: filters/main_movie_filter/main_movie_filter.dockerfile
     depends_on:
     - rabbitmq
+    - monitor
     environment:
     - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=main_movie_filter
     image: main_movie_filter:latest
     links:
     - rabbitmq
   main_movie_filter_1:
     depends_on:
     - rabbitmq
+    - monitor
     environment:
     - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=main_movie_filter_1
     image: main_movie_filter:latest
     links:
     - rabbitmq
   main_movie_filter_2:
     depends_on:
     - rabbitmq
+    - monitor
     environment:
     - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=main_movie_filter_2
     image: main_movie_filter:latest
     links:
     - rabbitmq
+  monitor:
+    build:
+      context: .
+      dockerfile: monitor/monitor.dockerfile
+    environment:
+    - PYTHONUNBUFFERED=1
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - HEARTBEAT_TIMEOUT=15000
+    ports:
+    - 50001:50001
+    volumes:
+    - /var/run/docker.sock:/var/run/docker.sock
   no_colab_productions_filter:
     build:
       context: .
       dockerfile: filters/no_colab_productions/no_colab_productions_filter.dockerfile
     depends_on:
     - rabbitmq
+    - monitor
     environment:
     - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=no_colab_productions_filter
     image: no_colab_productions_filter:latest
     links:
     - rabbitmq
   no_colab_productions_filter_1:
     depends_on:
     - rabbitmq
+    - monitor
     environment:
     - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=no_colab_productions_filter_1
     image: no_colab_productions_filter:latest
     links:
     - rabbitmq
   no_colab_productions_filter_2:
     depends_on:
     - rabbitmq
+    - monitor
     environment:
     - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=no_colab_productions_filter_2
     image: no_colab_productions_filter:latest
     links:
     - rabbitmq
@@ -192,24 +296,39 @@ services:
       dockerfile: joiner/ratings/ratings_joiner.dockerfile
     depends_on:
     - rabbitmq
+    - monitor
     environment:
     - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=ratings_joiner
     image: ratings_joiner:latest
     links:
     - rabbitmq
   ratings_joiner_1:
     depends_on:
     - rabbitmq
+    - monitor
     environment:
     - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=ratings_joiner_1
     image: ratings_joiner:latest
     links:
     - rabbitmq
   ratings_joiner_2:
     depends_on:
     - rabbitmq
+    - monitor
     environment:
     - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=ratings_joiner_2
     image: ratings_joiner:latest
     links:
     - rabbitmq
@@ -219,8 +338,13 @@ services:
       dockerfile: aggregator/sentiment_aggregator/aggregator.dockerfile
     depends_on:
     - rabbitmq
+    - monitor
     environment:
     - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=sentiment_aggregator
     links:
     - rabbitmq
   sentiment_filter:
@@ -229,35 +353,70 @@ services:
       dockerfile: filters/sentiment_analizer/sentiment_analizer.dockerfile
     depends_on:
     - rabbitmq
+    - monitor
     environment:
     - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=sentiment_filter
     image: sentiment_filter:latest
     links:
     - rabbitmq
   sentiment_filter_1:
     depends_on:
     - rabbitmq
+    - monitor
     environment:
     - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=sentiment_filter_1
     image: sentiment_filter:latest
     links:
     - rabbitmq
   sentiment_filter_2:
     depends_on:
     - rabbitmq
+    - monitor
     environment:
     - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=sentiment_filter_2
     image: sentiment_filter:latest
     links:
     - rabbitmq
+  test:
+    build:
+      context: .
+      dockerfile: test/integration.dockerfile
+    depends_on:
+    - monitor
+    environment:
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=test
+    volumes:
+    - ./files/long/client_2/movies_metadata.csv:/root/files/movies_metadata.csv
+    - ./files/long/client_2/credits.csv:/root/files/credits.csv
+    - ./files/long/client_2/ratings.csv:/root/files/ratings.csv
   top_10_credits_aggregator:
     build:
       context: .
       dockerfile: aggregator/top_10_credits_aggregator/aggregator.dockerfile
     depends_on:
     - rabbitmq
+    - monitor
     environment:
     - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=top_10_credits_aggregator
     links:
     - rabbitmq
   top_5_countries_aggregator:
@@ -266,8 +425,13 @@ services:
       dockerfile: aggregator/top_aggregator/aggregator.dockerfile
     depends_on:
     - rabbitmq
+    - monitor
     environment:
     - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=top_5_countries_aggregator
     links:
     - rabbitmq
   twentieth_century_arg_aggregator:
@@ -276,8 +440,13 @@ services:
       dockerfile: aggregator/twentieth_century_arg_aggregator/aggregator.dockerfile
     depends_on:
     - rabbitmq
+    - monitor
     environment:
     - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=twentieth_century_arg_aggregator
     links:
     - rabbitmq
   twentieth_century_arg_esp_aggregator:
@@ -286,8 +455,13 @@ services:
       dockerfile: aggregator/twentieth_century_arg_esp_aggregator/aggregator.dockerfile
     depends_on:
     - rabbitmq
+    - monitor
     environment:
     - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=twentieth_century_arg_esp_aggregator
     links:
     - rabbitmq
   twentieth_century_filter:
@@ -296,24 +470,39 @@ services:
       dockerfile: filters/twentieth_century/twentieth_century_filter.dockerfile
     depends_on:
     - rabbitmq
+    - monitor
     environment:
     - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=twentieth_century_filter
     image: twentieth_century_filter:latest
     links:
     - rabbitmq
   twentieth_century_filter_1:
     depends_on:
     - rabbitmq
+    - monitor
     environment:
     - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=twentieth_century_filter_1
     image: twentieth_century_filter:latest
     links:
     - rabbitmq
   twentieth_century_filter_2:
     depends_on:
     - rabbitmq
+    - monitor
     environment:
     - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=twentieth_century_filter_2
     image: twentieth_century_filter:latest
     links:
     - rabbitmq
