--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,42 @@ services:
       context: .
       dockerfile: filters/arg_production/arg_production_filter.dockerfile
     depends_on:
+      monitor:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+      worker:
+        condition: service_started
+    environment:
+    - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=arg_production_filter
+    image: arg_production_filter:latest
+    links:
+    - rabbitmq
+  arg_production_filter_1:
+    depends_on:
+      monitor:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+      worker:
+        condition: service_started
+    environment:
+    - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=arg_production_filter_1
+    image: arg_production_filter:latest
+    links:
+    - rabbitmq
+  arg_production_filter_2:
+    depends_on:
+      monitor:
+        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -22,6 +58,8 @@ services:
       context: .
       dockerfile: aggregator/best_and_worst_ratings_aggregator/aggregator.dockerfile
     depends_on:
+      monitor:
+        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -34,11 +72,11 @@ services:
     - SERVICE_NAME=best_and_worst_ratings_aggregator
     links:
     - rabbitmq
-  client_1:
+  client_2:
     build:
       context: .
       dockerfile: client/client.dockerfile
-    container_name: client_1
+    container_name: client_2
     depends_on:
     - client_decodifier
     - monitor
@@ -46,21 +84,32 @@ services:
     - PYTHONUNBUFFERED=1
     - DECODIFIER_HOST=client_decodifier
     - DECODIFIER_PORT=50000
-    - CLIENT_ID=1
+    - CLIENT_ID=2
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=client_2
     volumes:
-    - ./files/short//movies_metadata.csv:/root/files/movies_metadata.csv
-    - ./files/short//credits.csv:/root/files/credits.csv
-    - ./files/short//ratings.csv:/root/files/ratings.csv
-    - ./results/short//results.json:/root/results/results.json
+    - ./files/long/client_2/movies_metadata.csv:/root/files/movies_metadata.csv
+    - ./files/long/client_2/credits.csv:/root/files/credits.csv
+    - ./files/long/client_2/ratings.csv:/root/files/ratings.csv
+    - ./results/long/client_2/results.json:/root/results/results.json
   client_decodifier:
     build:
       context: .
       dockerfile: client_decodifier/client_decodifier.dockerfile
     depends_on:
+      monitor:
+        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
         condition: service_started
+    environment:
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=client_decodifier
     ports:
     - 50000:50000
   credits_joiner:
@@ -68,6 +117,42 @@ services:
       context: .
       dockerfile: joiner/credits/credits_joiner.dockerfile
     depends_on:
+      monitor:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+      worker:
+        condition: service_started
+    environment:
+    - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=credits_joiner
+    image: credits_joiner:latest
+    links:
+    - rabbitmq
+  credits_joiner_1:
+    depends_on:
+      monitor:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+      worker:
+        condition: service_started
+    environment:
+    - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=credits_joiner_1
+    image: credits_joiner:latest
+    links:
+    - rabbitmq
+  credits_joiner_2:
+    depends_on:
+      monitor:
+        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -86,6 +171,42 @@ services:
       context: .
       dockerfile: filters/esp_production/esp_production_filter.dockerfile
     depends_on:
+      monitor:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+      worker:
+        condition: service_started
+    environment:
+    - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=esp_production_filter
+    image: esp_production_filter:latest
+    links:
+    - rabbitmq
+  esp_production_filter_1:
+    depends_on:
+      monitor:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+      worker:
+        condition: service_started
+    environment:
+    - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=esp_production_filter_1
+    image: esp_production_filter:latest
+    links:
+    - rabbitmq
+  esp_production_filter_2:
+    depends_on:
+      monitor:
+        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -104,6 +225,42 @@ services:
       context: .
       dockerfile: filters/main_movie_filter/main_movie_filter.dockerfile
     depends_on:
+      monitor:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+      worker:
+        condition: service_started
+    environment:
+    - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=main_movie_filter
+    image: main_movie_filter:latest
+    links:
+    - rabbitmq
+  main_movie_filter_1:
+    depends_on:
+      monitor:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+      worker:
+        condition: service_started
+    environment:
+    - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=main_movie_filter_1
+    image: main_movie_filter:latest
+    links:
+    - rabbitmq
+  main_movie_filter_2:
+    depends_on:
+      monitor:
+        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -135,6 +292,42 @@ services:
       context: .
       dockerfile: filters/no_colab_productions/no_colab_productions_filter.dockerfile
     depends_on:
+      monitor:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+      worker:
+        condition: service_started
+    environment:
+    - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=no_colab_productions_filter
+    image: no_colab_productions_filter:latest
+    links:
+    - rabbitmq
+  no_colab_productions_filter_1:
+    depends_on:
+      monitor:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+      worker:
+        condition: service_started
+    environment:
+    - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=no_colab_productions_filter_1
+    image: no_colab_productions_filter:latest
+    links:
+    - rabbitmq
+  no_colab_productions_filter_2:
+    depends_on:
+      monitor:
+        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -166,6 +359,42 @@ services:
       context: .
       dockerfile: joiner/ratings/ratings_joiner.dockerfile
     depends_on:
+      monitor:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+      worker:
+        condition: service_started
+    environment:
+    - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=ratings_joiner
+    image: ratings_joiner:latest
+    links:
+    - rabbitmq
+  ratings_joiner_1:
+    depends_on:
+      monitor:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+      worker:
+        condition: service_started
+    environment:
+    - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=ratings_joiner_1
+    image: ratings_joiner:latest
+    links:
+    - rabbitmq
+  ratings_joiner_2:
+    depends_on:
+      monitor:
+        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -184,6 +413,8 @@ services:
       context: .
       dockerfile: aggregator/sentiment_aggregator/aggregator.dockerfile
     depends_on:
+      monitor:
+        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -201,6 +432,42 @@ services:
       context: .
       dockerfile: filters/sentiment_analizer/sentiment_analizer.dockerfile
     depends_on:
+      monitor:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+      worker:
+        condition: service_started
+    environment:
+    - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=sentiment_filter
+    image: sentiment_filter:latest
+    links:
+    - rabbitmq
+  sentiment_filter_1:
+    depends_on:
+      monitor:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+      worker:
+        condition: service_started
+    environment:
+    - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=sentiment_filter_1
+    image: sentiment_filter:latest
+    links:
+    - rabbitmq
+  sentiment_filter_2:
+    depends_on:
+      monitor:
+        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -214,26 +481,13 @@ services:
     image: sentiment_filter:latest
     links:
     - rabbitmq
-  test:
-    build:
-      context: .
-      dockerfile: test/integration.dockerfile
-    depends_on:
-    - monitor
-    environment:
-    - MONITOR_HOST=monitor
-    - MONITOR_PORT=50001
-    - HEARTBEAT_INTERVAL=5000
-    - SERVICE_NAME=test
-    volumes:
-    - ./files/long/client_2/movies_metadata.csv:/root/files/movies_metadata.csv
-    - ./files/long/client_2/credits.csv:/root/files/credits.csv
-    - ./files/long/client_2/ratings.csv:/root/files/ratings.csv
   top_10_credits_aggregator:
     build:
       context: .
       dockerfile: aggregator/top_10_credits_aggregator/aggregator.dockerfile
     depends_on:
+      monitor:
+        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -251,6 +505,8 @@ services:
       context: .
       dockerfile: aggregator/top_aggregator/aggregator.dockerfile
     depends_on:
+      monitor:
+        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -268,6 +524,8 @@ services:
       context: .
       dockerfile: aggregator/twentieth_century_arg_aggregator/aggregator.dockerfile
     depends_on:
+      monitor:
+        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -285,6 +543,8 @@ services:
       context: .
       dockerfile: aggregator/twentieth_century_arg_esp_aggregator/aggregator.dockerfile
     depends_on:
+      monitor:
+        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -302,6 +562,8 @@ services:
       context: .
       dockerfile: filters/twentieth_century/twentieth_century_filter.dockerfile
     depends_on:
+      monitor:
+        condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
@@ -315,8 +577,50 @@ services:
     image: twentieth_century_filter:latest
     links:
     - rabbitmq
+  twentieth_century_filter_1:
+    depends_on:
+      monitor:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+      worker:
+        condition: service_started
+    environment:
+    - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=twentieth_century_filter_1
+    image: twentieth_century_filter:latest
+    links:
+    - rabbitmq
+  twentieth_century_filter_2:
+    depends_on:
+      monitor:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+      worker:
+        condition: service_started
+    environment:
+    - PYTHONUNBUFFERED=1
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=twentieth_century_filter_2
+    image: twentieth_century_filter:latest
+    links:
+    - rabbitmq
   worker:
     build:
       context: .
       dockerfile: worker/worker.dockerfile
+    depends_on:
+      monitor:
+        condition: service_started
+    environment:
+    - MONITOR_HOST=monitor
+    - MONITOR_PORT=50001
+    - HEARTBEAT_INTERVAL=5000
+    - SERVICE_NAME=worker
     image: worker:latest
