--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,11 @@ services:
       context: .
       dockerfile: filters/arg_production/arg_production_filter.dockerfile
     depends_on:
-      monitor:
+      monitor_1:
+        condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
         condition: service_started
       rabbitmq:
         condition: service_healthy
@@ -12,8 +16,8 @@ services:
         condition: service_started
     environment:
     - PYTHONUNBUFFERED=1
-    - MONITOR_HOST=monitor
-    - MONITOR_PORT=50001
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
     - HEARTBEAT_INTERVAL=5000
     - SERVICE_NAME=arg_production_filter
     image: arg_production_filter:latest
@@ -24,7 +28,11 @@ services:
       context: .
       dockerfile: aggregator/best_and_worst_ratings_aggregator/aggregator.dockerfile
     depends_on:
-      monitor:
+      monitor_1:
+        condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
         condition: service_started
       rabbitmq:
         condition: service_healthy
@@ -32,50 +40,58 @@ services:
         condition: service_started
     environment:
     - PYTHONUNBUFFERED=1
-    - MONITOR_HOST=monitor
-    - MONITOR_PORT=50001
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
     - HEARTBEAT_INTERVAL=5000
     - SERVICE_NAME=best_and_worst_ratings_aggregator
     links:
     - rabbitmq
-  client_1:
+  client_2:
     build:
       context: .
       dockerfile: client/client.dockerfile
-    container_name: client_1
+    container_name: client_2
     depends_on:
       client_decodifier:
         condition: service_healthy
-      monitor:
+      monitor_1:
+        condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
         condition: service_started
     environment:
     - PYTHONUNBUFFERED=1
     - DECODIFIER_HOST=client_decodifier
     - DECODIFIER_PORT=50000
-    - CLIENT_ID=1
-    - MONITOR_HOST=monitor
-    - MONITOR_PORT=50001
+    - CLIENT_ID=2
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
     - HEARTBEAT_INTERVAL=5000
-    - SERVICE_NAME=client_1
+    - SERVICE_NAME=client_2
     volumes:
-    - ./files/short//movies_metadata.csv:/root/files/movies_metadata.csv
-    - ./files/short//credits.csv:/root/files/credits.csv
-    - ./files/short//ratings.csv:/root/files/ratings.csv
-    - ./results/short//results.json:/root/results/results.json
+    - ./files/long/client_2/movies_metadata.csv:/root/files/movies_metadata.csv
+    - ./files/long/client_2/credits.csv:/root/files/credits.csv
+    - ./files/long/client_2/ratings.csv:/root/files/ratings.csv
+    - ./results/long/client_2/results.json:/root/results/results.json
   client_decodifier:
     build:
       context: .
       dockerfile: client_decodifier/client_decodifier.dockerfile
     depends_on:
-      monitor:
+      monitor_1:
+        condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
         condition: service_started
       rabbitmq:
         condition: service_healthy
       worker:
         condition: service_started
     environment:
-    - MONITOR_HOST=monitor
-    - MONITOR_PORT=50001
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
     - HEARTBEAT_INTERVAL=5000
     - SERVICE_NAME=client_decodifier
     healthcheck:
@@ -90,7 +106,11 @@ services:
       context: .
       dockerfile: joiner/credits/credits_joiner.dockerfile
     depends_on:
-      monitor:
+      monitor_1:
+        condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
         condition: service_started
       rabbitmq:
         condition: service_healthy
@@ -98,8 +118,8 @@ services:
         condition: service_started
     environment:
     - PYTHONUNBUFFERED=1
-    - MONITOR_HOST=monitor
-    - MONITOR_PORT=50001
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
     - HEARTBEAT_INTERVAL=5000
     - SERVICE_NAME=credits_joiner
     image: credits_joiner:latest
@@ -110,7 +130,11 @@ services:
       context: .
       dockerfile: filters/esp_production/esp_production_filter.dockerfile
     depends_on:
-      monitor:
+      monitor_1:
+        condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
         condition: service_started
       rabbitmq:
         condition: service_healthy
@@ -118,8 +142,8 @@ services:
         condition: service_started
     environment:
     - PYTHONUNBUFFERED=1
-    - MONITOR_HOST=monitor
-    - MONITOR_PORT=50001
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
     - HEARTBEAT_INTERVAL=5000
     - SERVICE_NAME=esp_production_filter
     image: esp_production_filter:latest
@@ -130,7 +154,11 @@ services:
       context: .
       dockerfile: filters/main_movie_filter/main_movie_filter.dockerfile
     depends_on:
-      monitor:
+      monitor_1:
+        condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
         condition: service_started
       rabbitmq:
         condition: service_healthy
@@ -138,24 +166,62 @@ services:
         condition: service_started
     environment:
     - PYTHONUNBUFFERED=1
-    - MONITOR_HOST=monitor
-    - MONITOR_PORT=50001
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
     - HEARTBEAT_INTERVAL=5000
     - SERVICE_NAME=main_movie_filter
     image: main_movie_filter:latest
     links:
     - rabbitmq
-  monitor:
+  monitor_1:
     build:
       context: .
-      dockerfile: monitor/monitor.dockerfile
+      dockerfile: monitor/monitor_cluster.dockerfile
     environment:
     - PYTHONUNBUFFERED=1
-    - MONITOR_PORT=50001
+    - MONITOR_SERVICE_PORT=50001
+    - MONITOR_CLUSTER_PORT=50011
     - HEARTBEAT_INTERVAL=5000
     - HEARTBEAT_TIMEOUT=15000
+    - MONITOR_NODE_ID=1
+    - MONITOR_CLUSTER_NODES=monitor_1,monitor_2,monitor_3
     ports:
     - 50001:50001
+    - 50011:50011
+    volumes:
+    - /var/run/docker.sock:/var/run/docker.sock
+  monitor_2:
+    build:
+      context: .
+      dockerfile: monitor/monitor_cluster.dockerfile
+    environment:
+    - PYTHONUNBUFFERED=1
+    - MONITOR_SERVICE_PORT=50002
+    - MONITOR_CLUSTER_PORT=50012
+    - HEARTBEAT_INTERVAL=5000
+    - HEARTBEAT_TIMEOUT=15000
+    - MONITOR_NODE_ID=2
+    - MONITOR_CLUSTER_NODES=monitor_1,monitor_2,monitor_3
+    ports:
+    - 50002:50002
+    - 50012:50012
+    volumes:
+    - /var/run/docker.sock:/var/run/docker.sock
+  monitor_3:
+    build:
+      context: .
+      dockerfile: monitor/monitor_cluster.dockerfile
+    environment:
+    - PYTHONUNBUFFERED=1
+    - MONITOR_SERVICE_PORT=50003
+    - MONITOR_CLUSTER_PORT=50013
+    - HEARTBEAT_INTERVAL=5000
+    - HEARTBEAT_TIMEOUT=15000
+    - MONITOR_NODE_ID=3
+    - MONITOR_CLUSTER_NODES=monitor_1,monitor_2,monitor_3
+    ports:
+    - 50003:50003
+    - 50013:50013
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
   no_colab_productions_filter:
@@ -163,7 +229,11 @@ services:
       context: .
       dockerfile: filters/no_colab_productions/no_colab_productions_filter.dockerfile
     depends_on:
-      monitor:
+      monitor_1:
+        condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
         condition: service_started
       rabbitmq:
         condition: service_healthy
@@ -171,8 +241,8 @@ services:
         condition: service_started
     environment:
     - PYTHONUNBUFFERED=1
-    - MONITOR_HOST=monitor
-    - MONITOR_PORT=50001
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
     - HEARTBEAT_INTERVAL=5000
     - SERVICE_NAME=no_colab_productions_filter
     image: no_colab_productions_filter:latest
@@ -196,7 +266,11 @@ services:
       context: .
       dockerfile: joiner/ratings/ratings_joiner.dockerfile
     depends_on:
-      monitor:
+      monitor_1:
+        condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
         condition: service_started
       rabbitmq:
         condition: service_healthy
@@ -204,8 +278,8 @@ services:
         condition: service_started
     environment:
     - PYTHONUNBUFFERED=1
-    - MONITOR_HOST=monitor
-    - MONITOR_PORT=50001
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
     - HEARTBEAT_INTERVAL=5000
     - SERVICE_NAME=ratings_joiner
     image: ratings_joiner:latest
@@ -216,7 +290,11 @@ services:
       context: .
       dockerfile: aggregator/sentiment_aggregator/aggregator.dockerfile
     depends_on:
-      monitor:
+      monitor_1:
+        condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
         condition: service_started
       rabbitmq:
         condition: service_healthy
@@ -224,8 +302,8 @@ services:
         condition: service_started
     environment:
     - PYTHONUNBUFFERED=1
-    - MONITOR_HOST=monitor
-    - MONITOR_PORT=50001
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
     - HEARTBEAT_INTERVAL=5000
     - SERVICE_NAME=sentiment_aggregator
     links:
@@ -235,7 +313,11 @@ services:
       context: .
       dockerfile: filters/sentiment_analizer/sentiment_analizer.dockerfile
     depends_on:
-      monitor:
+      monitor_1:
+        condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
         condition: service_started
       rabbitmq:
         condition: service_healthy
@@ -243,8 +325,8 @@ services:
         condition: service_started
     environment:
     - PYTHONUNBUFFERED=1
-    - MONITOR_HOST=monitor
-    - MONITOR_PORT=50001
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
     - HEARTBEAT_INTERVAL=5000
     - SERVICE_NAME=sentiment_filter
     image: sentiment_filter:latest
@@ -255,7 +337,11 @@ services:
       context: .
       dockerfile: aggregator/top_10_credits_aggregator/aggregator.dockerfile
     depends_on:
-      monitor:
+      monitor_1:
+        condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
         condition: service_started
       rabbitmq:
         condition: service_healthy
@@ -263,8 +349,8 @@ services:
         condition: service_started
     environment:
     - PYTHONUNBUFFERED=1
-    - MONITOR_HOST=monitor
-    - MONITOR_PORT=50001
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
     - HEARTBEAT_INTERVAL=5000
     - SERVICE_NAME=top_10_credits_aggregator
     links:
@@ -274,7 +360,11 @@ services:
       context: .
       dockerfile: aggregator/top_aggregator/aggregator.dockerfile
     depends_on:
-      monitor:
+      monitor_1:
+        condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
         condition: service_started
       rabbitmq:
         condition: service_healthy
@@ -282,8 +372,8 @@ services:
         condition: service_started
     environment:
     - PYTHONUNBUFFERED=1
-    - MONITOR_HOST=monitor
-    - MONITOR_PORT=50001
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
     - HEARTBEAT_INTERVAL=5000
     - SERVICE_NAME=top_5_countries_aggregator
     links:
@@ -293,7 +383,11 @@ services:
       context: .
       dockerfile: aggregator/twentieth_century_arg_aggregator/aggregator.dockerfile
     depends_on:
-      monitor:
+      monitor_1:
+        condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
         condition: service_started
       rabbitmq:
         condition: service_healthy
@@ -301,8 +395,8 @@ services:
         condition: service_started
     environment:
     - PYTHONUNBUFFERED=1
-    - MONITOR_HOST=monitor
-    - MONITOR_PORT=50001
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
     - HEARTBEAT_INTERVAL=5000
     - SERVICE_NAME=twentieth_century_arg_aggregator
     links:
@@ -312,7 +406,11 @@ services:
       context: .
       dockerfile: aggregator/twentieth_century_arg_esp_aggregator/aggregator.dockerfile
     depends_on:
-      monitor:
+      monitor_1:
+        condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
         condition: service_started
       rabbitmq:
         condition: service_healthy
@@ -320,8 +418,8 @@ services:
         condition: service_started
     environment:
     - PYTHONUNBUFFERED=1
-    - MONITOR_HOST=monitor
-    - MONITOR_PORT=50001
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
     - HEARTBEAT_INTERVAL=5000
     - SERVICE_NAME=twentieth_century_arg_esp_aggregator
     links:
@@ -331,7 +429,11 @@ services:
       context: .
       dockerfile: filters/twentieth_century/twentieth_century_filter.dockerfile
     depends_on:
-      monitor:
+      monitor_1:
+        condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
         condition: service_started
       rabbitmq:
         condition: service_healthy
@@ -339,8 +441,8 @@ services:
         condition: service_started
     environment:
     - PYTHONUNBUFFERED=1
-    - MONITOR_HOST=monitor
-    - MONITOR_PORT=50001
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
     - HEARTBEAT_INTERVAL=5000
     - SERVICE_NAME=twentieth_century_filter
     image: twentieth_century_filter:latest
@@ -351,11 +453,15 @@ services:
       context: .
       dockerfile: worker/worker.dockerfile
     depends_on:
-      monitor:
+      monitor_1:
+        condition: service_started
+      monitor_2:
+        condition: service_started
+      monitor_3:
         condition: service_started
     environment:
-    - MONITOR_HOST=monitor
-    - MONITOR_PORT=50001
+    - MONITOR_HOSTS=monitor_1,monitor_2,monitor_3
+    - MONITOR_PORTS=50001,50002,50003
     - HEARTBEAT_INTERVAL=5000
     - SERVICE_NAME=worker
     image: worker:latest
