--- a/config_short.yaml
+++ b/config_short.yaml
@@ -8,45 +8,62 @@ workers:
   twentieth_century:
     count: 1
     log_level: INFO
+    kill: true
   main_movie:
     count: 1
     log_level: INFO
+    kill: true
   esp_production:
     count: 1
     log_level: INFO
+    kill: true
   no_colab_productions:
     count: 1
     log_level: INFO
+    kill: true
   sentiment:
     count: 1
     log_level: INFO
+    kill: true
   arg_production:
     count: 1
     log_level: INFO
+    kill: true
   credits:
     count: 1
     log_level: INFO
+    kill: true
   ratings:
     count: 1
     log_level: INFO
+    kill: true
 
 aggregators:
   twentieth_century_arg_esp:
     generate: true
     log_level: INFO
+    kill: true
   twentieth_century_arg:
     generate: true
     log_level: INFO
+    kill: true
   top_5_countries:
     generate: true
     log_level: INFO
+    kill: true
   top_10_credits:
     generate: true
     log_level: INFO
+    kill: true
   best_and_worst_ratings:
     generate: true
     log_level: INFO
+    kill: true
   sentiment:
     generate: true
     log_level: INFO
-test: false
+    kill: false
+
+test:
+  random: true
+  interval: 1
